<resources>
    <string name="app_name" translatable="false">IQUIZ</string>
    <string name="password_should_contain_click_here" translatable="false">password should contain * click here</string>
    <string name="enter_your_email" translatable="false">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up_with_facebook">Sign Up With facebook</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_up_with_linkedin">Sign Up With LinkedIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">submit</string>
    <string name="already_sign_up_login">Already Sign Up ? LogIn</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about_us">This is my project , I have to finish it</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="previous">Previous</string>
    <string name="submit_ans">Submit</string>
    <string name="textview_description">TextView</string>
    <string name="todo">TODO</string>
    <string name="ok">Ok</string>
</resources>