<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.QuestionActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cairo_bold"
        android:layout_marginTop="25dp"
        android:text="@string/textview_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/btnguideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:visibility="invisible"
        android:id="@+id/previous"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/previous"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/cairo_bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnguideline" />
    <Button
        android:visibility="invisible"
        android:id="@+id/submit"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/submit_ans"
        android:fontFamily="@font/cairo_bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnguideline" />

    <Button
        android:visibility="invisible"
        android:id="@+id/Next"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="Next"
        android:fontFamily="@font/cairo_bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnguideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/recyguideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/optionlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recyguideline2"
        app:layout_constraintEnd_toEndOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@+id/description"/>

</androidx.constraintlayout.widget.ConstraintLayout>